infra/k8s/04-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockroom-api
  namespace: stockroom
  labels:
    app.kubernetes.io/name: stockroom
    app.kubernetes.io/component: api
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: stockroom
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stockroom
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: stockroom-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "700m"
              memory: "640Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: stockroom-api
  namespace: stockroom
  labels:
    app.kubernetes.io/name: stockroom
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: stockroom
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
